--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>What can <i>functions</i> do?</h1>
         
         <p> 
-        Write the code once, and use it many times.<br><br>
+        Allow you to write code once, and use it many times.<br><br>
         Use the same code with different arguments to produce different results.
         </p>
         
@@ -46,7 +46,7 @@
         <img class="guide" src="img/2.png">
             <br>Add a <i>name</i><br>
         <img class="guide" src="img/3.png">
-            <br>Add <i>parentheses()</i><br>
+            <br>Add <i>parentheses()</i> with some variable names<br>
 <img class="guide" src="img/4.png">
         <br>Write the code you want to execute inside <i>{curly brackets}</i><br>
 <img class="guide" src="img/5.png">
